# MultiAgentSystems.RuntimeObjectManager

./: ._CMakeLists.txt  CMakeLists.txt  README.md
src/: main.cpp
src/headers/: Course.hpp  ISerialize.hpp  Log.hpp  MoBase.hpp  ObjectManager.hpp  Room.hpp  Student.hpp
src/resources/: Course.cpp  Log.cpp  MoBase.cpp  ObjectManager.cpp  Room.cpp  Student.cpp
